--- a/package.json
+++ b/package.json
@@ -22,6 +22,15 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
     "sequelize": "^6.28.0",
-    "yup": "^1.0.0"
+    "yup": "^1.0.0" , 
+
+    "fs-capacitor": "^6.2.0",
+    "graphql-upload": "^11.0.0"
+    
+  },
+  "resolutions": {
+    
+    "fs-capacitor": "^6.2.0",
+    "graphql-upload": "^11.0.0"
   }
 }
