--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=4000
 JWT_SECRET=125498652754 
 UPLOAD_POST_IMAGES_DIR=uploads/posts/images
 UPLOAD_POST_VIDEOS_DIR=uploads/posts/videos
+
+UPLOAD_COMMENTS_RECORDS_DIR=uploads/comments
+UPLOAD_REPLAYS_RECORDS_DIR=uploads/replays
