toggle StoryLike done

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ UPLOAD_POST_VIDEOS_DIR=uploads/posts/videos
 
 UPLOAD_COMMENTS_RECORDS_DIR=uploads/comments
 UPLOAD_REPLAYS_RECORDS_DIR=uploads/replays
+
+UPLOAD_STORIES_DIR = uploads/stories
