--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ UPLOAD_COMMENTS_RECORDS_DIR=uploads/comments
 UPLOAD_REPLAYS_RECORDS_DIR=uploads/replays
 
 UPLOAD_STORIES_DIR = uploads/stories
+
+UPLOAD_MESSAGE_IMAGES_DIR = uploads/message/images
+UPLOAD_MESSAGE_VIDEOS_DIR = uploads/message/videos
+UPLOAD_MESSAGE_RECORDS_DIR = uploads/message/records
