Categories and ValidationRequest done

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ UPLOAD_STORIES_DIR = uploads/stories
 UPLOAD_MESSAGE_IMAGES_DIR = uploads/message/images
 UPLOAD_MESSAGE_VIDEOS_DIR = uploads/message/videos
 UPLOAD_MESSAGE_RECORDS_DIR = uploads/message/records
+
+UPLOAD_VALIDATION_DIR = uploads/validation
