Profile Picture added

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 PORT=4000 
+
+
 JWT_SECRET=125498652754 
 UPLOAD_POST_IMAGES_DIR=uploads/posts/images
 UPLOAD_POST_VIDEOS_DIR=uploads/posts/videos
@@ -13,3 +15,4 @@ UPLOAD_MESSAGE_VIDEOS_DIR = uploads/message/videos
 UPLOAD_MESSAGE_RECORDS_DIR = uploads/message/records
 
 UPLOAD_VALIDATION_DIR = uploads/validation
+UPLOAD_PICTURES_DIR =uploads/pictures
