Update Follower and Following and num of posts

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ PORT=4000
 JWT_SECRET=125498652754 
 UPLOAD_POST_IMAGES_DIR=uploads/posts/images
 UPLOAD_POST_VIDEOS_DIR=uploads/posts/videos
+UPLOAD_POST_THUMBNAILS_DIR=uploads/posts/thumbnails
 
 UPLOAD_COMMENTS_RECORDS_DIR=uploads/comments
 UPLOAD_REPLAYS_RECORDS_DIR=uploads/replays
