--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.5.0",
+    "@graphql-tools/schema": "^9.0.17",
     "apollo-server-express": "^3.11.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
@@ -19,12 +21,16 @@
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "fs-capacitor": "^6.2.0",
+    "graphql": "^15.8.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^11.0.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
     "sequelize": "^6.28.0",
     "sharp": "^0.31.3",
+    "subscriptions-transport-ws": "^0.11.0",
+    "ws": "^8.13.0",
     "yup": "^1.0.0"
   },
   "resolutions": {
