--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ UPLOAD_MESSAGE_RECORDS_DIR = uploads/message/records
 
 UPLOAD_VALIDATION_DIR = uploads/validation
 UPLOAD_PICTURES_DIR =uploads/pictures
+ASSETS=assets
