--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "fcm-node": "^1.6.1",
     "fs-capacitor": "^6.2.0",
     "graphql": "^15.8.0",
     "graphql-subscriptions": "^2.0.0",
