--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r esm .",
-    "dev": "nodemon -r esm ."
+    "dev": "nodemon -r esm ." , 
+    "build" : "npm install --legacy-peer-deps"
   },
   "keywords": [],
   "author": "",
