--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r esm .",
-    "dev": "nodemon -r esm ." , 
-    "build" : "npm install --legacy-peer-deps"
+    "dev": "nodemon -r esm ." 
+ 
   },
   "keywords": [],
   "author": "",
