--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "esm": "^3.2.25",
     "express": "^4.18.2",
     "fcm-node": "^1.6.1",
     "fs-capacitor": "^6.2.0",
@@ -30,10 +29,14 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
     "sequelize": "^6.28.0",
-    "sharp": "^0.31.3",
+   
     "subscriptions-transport-ws": "^0.11.0",
     "ws": "^8.13.0",
     "yup": "^1.0.0"
+  },
+  "devDependencies": {
+    "esm": "^3.2.25" 
+    
   },
   "resolutions": {
     "fs-capacitor": "^6.2.0",
