--- a/.env
+++ b/.env
@@ -18,3 +18,5 @@ UPLOAD_MESSAGE_RECORDS_DIR = uploads/message/records
 UPLOAD_VALIDATION_DIR = uploads/validation
 UPLOAD_PICTURES_DIR =uploads/pictures
 ASSETS=assets
+
+NODE_ENV=production 
