--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r esm .",
-    "dev": "nodemon -r esm ." 
+    "dev": "nodemon -r esm ."
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "esm": "^3.2.25",
     "express": "^4.18.2",
     "fcm-node": "^1.6.1",
     "fs-capacitor": "^6.2.0",
@@ -27,15 +28,12 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
+    "pg": "^8.10.0",
     "sequelize": "^6.28.0",
-   
     "subscriptions-transport-ws": "^0.11.0",
     "ws": "^8.13.0",
-    "yup": "^1.0.0" ,    
-    "esm": "^3.2.25" 
-    
+    "yup": "^1.0.0"
   },
-  
   "resolutions": {
     "fs-capacitor": "^6.2.0",
     "graphql-upload": "^11.0.0"
