--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,24 @@ node_modules
 uploads/posts/images/*
 uploads/posts/videos/*
 uploads/posts/thumbnails/*
-
 uploads/comments/*
 uploads/replays/*
-
 uploads/stories/*
-
 uploads/message/images/*
 uploads/message/videos/*
 uploads/message/records/*
-
 uploads/validation/*
 uploads/pictures/*
+
+
+!uploads/posts/images/.gitkeep 
+!uploads/posts/videos/.gitkeep 
+!uploads/posts/thumbnails/.gitkeep 
+!uploads/comments/.gitkeep 
+!uploads/replays/.gitkeep 
+!uploads/stories/.gitkeep 
+!uploads/message/images/.gitkeep 
+!uploads/message/videos/.gitkeep 
+!uploads/message/records/.gitkeep 
+!uploads/validation/.gitkeep 
+!uploads/pictures/.gitkeep 
