--- a/config/config.json
+++ b/config/config.json
@@ -21,23 +21,18 @@
   },
   "production": {
 
-    "DB_URL" : "postgres://root:Xjnb4RY55mbjbuezTHCbMfbENJVPcwTR@dpg-chdssq1mbg5a4gsvblt0-a.oregon-postgres.render.com:5432/social_j15r" , 
+    
     "username": "root",
-    "password": "Xjnb4RY55mbjbuezTHCbMfbENJVPcwTR",
-    "database": "social_j15r",
-    "host": "dpg-chdssq1mbg5a4gsvblt0-a.oregon-postgres.render.com",
-    "port" : "5432" , 
-    "dialect": "postgres" , 
- 
+    "password": "vinkst",
+    "database": "vinkst",
+    "host": "127.0.0.1",
+    "dialect": "mysql" , 
     "logging" : false  , 
     "define": {
       "timestamps": false,
       "charset": "utf8",
       "collate": "utf8_general_ci"
-    } , 
-    "dialectOptions": {
-      "ssl": true,
-      "native": true
-    }
+    }  
+    
   }
 }
