--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
+    "nodemailer": "^6.9.4",
     "pg": "^8.10.0",
     "sequelize": "^6.28.0",
     "subscriptions-transport-ws": "^0.11.0",
