--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "fcm-node": "^1.6.1",
     "fs-capacitor": "^6.2.0",
+    "googleapis": "^122.0.0",
     "graphql": "^15.8.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^11.0.0",
