--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server-express": "^3.11.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "cloudinary": "^2.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
